
Check out [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=11349]this[/url] program also. It's for graphical modding.

For editing language files in The Conquerors,
I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819]this download[/url].

[b]Version History[/b]
Guide makers et cetera, please include the version into which your guide was written.

Version [b]2021.4.18[/b]:
-Scroll rate of tabs can be adjusted in options.
-Window no longer spawns larger than screen space.

Version [b]2021.4.11[/b]:
-Age of Empires DE SLP shadows displayed.
-Sprite cache based on memory used instead of sprite count.

Version [b]2021.4.4[/b]:
-Fixed crash when no palettes were loaded.
-Made SLP view update more reliably.
-Smoother scrolling.
-Improvements for high display scaling.

Version [b]2021.4.2[/b]:
-Added SMX reading support.
-Fixed reading Age of Empires DE SLP files.
-DE palette paths are saved in recent list.
-Improved reading of palettes.
-Fixed some rare crashes when switching data files.

Version [b]2021.3.22[/b]:
-Fixed several bugs in effects tab.
-Reduced lag when dragging main window.
-Stopped old recent paths from opening as wrong version.

Version [b]2021.3.15[/b]:
-Updated effects tab for UserPatch 1.5.
-More accurate text input error messages.

Version [b]2021.3.12[/b]:
-Added support for Expanding Fronts 1.3 and beyond.
-Fixed bugs in effect commanmd type drop down menu.

Version [b]2020.10.2[/b]:
-Support for new charge and damage resistance features in AoE II DE.
-Revealed hidden boxes in tech effects for new features in AoE II DE.

Version [b]2020.6.12[/b]:
-Fixed bug with language text indexes.
-Renamed technology cost and time modifiers for AoE DE.

Version [b]2020.3.30[/b]:
-Support for new AoE II DE game features.

Version [b]2019.11.28[/b]:
-Added more unit search filters.

Version [b]2019.11.22[/b]:
-Fixed default paths for AoE II DE.

Version [b]2019.7.2[/b]:
-Negative armor types can be changed via effects.