@@ -13,6 +13,9 @@ I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819
 [b]Version History[/b]
 Guide makers et cetera, please include the version into which your guide was written.
 
+Version [b]2021.4.25[/b]:
+-Fixed more bugs in effects tab including inability to type in negative armor and attack values for UP and DE2.
+
 Version [b]2021.4.18[/b]:
 -Scroll rate of tabs can be adjusted in options.
 -Window no longer spawns larger than screen space.
